# PythonPiscine

./: README.md
python0/ex00/: Hello.py
python0/ex01/: format_ft_time.py
python0/ex02/: find_ft_type.py  tester.py
python0/ex03/: NULL_not_found.py  tester.py
python0/ex04/: whatis.py
python0/ex05/: building.py
python0/ex06/: filterstring.py  ft_filter.py
python0/ex07/: sos.py
python0/ex08/: Loading.py  tester.py
python0/ex09/: LICENSE  README.md  pyproject.toml
python0/ex09/src/ft_package/: __init__.py  ft_package.py
python0/ex09/src/ft_package.egg-info/: PKG-INFO  SOURCES.txt
python1/ex00/: give_bmi.py  tester.py
python1/ex01/: array2D.py  tester.py
python1/ex02/: load_image.py
python1/ex03/: load_image.py  zoom.py
python1/ex04/: load_image.py  rotate.py
python1/ex05/: load_image.py  pimp_image.py  tester.py
python2/ex00/: load_csv.py  tester.py
python2/ex01/: aff_life.py  load_csv.py
python2/ex02/: aff_pop.py
python2/ex03/: load_csv.py  projection_life.py
python3/ex00/: S1E9.py  tester.py
python3/ex01/: S1E7.py  S1E9.py  tester.py
python3/ex02/: DiamondTrap.py  tester.py
python3/ex03/: ft_calculator.py  tester.py
python3/ex04/: ft_calculator.py  tester.py
python4/ex00/: statistics.py  tester.py
python4/ex01/: in_out.py  tester.py
python4/ex02/: callLimit.py  tester.py
python4/ex03/: new_student.py  tester.py
