[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="Yim Jiun Jye", email="jyim@student.42kl.edu.my" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]